chinh lai mot so duong dan tuong doi trong cac file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>English Speaking Assistant</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -77,7 +77,7 @@
             <button id="closePopup">Đóng</button>
     </div>
 
-    <script type="module" src="Main.js"></script>
+    <script type="module" src="./src/Main.js"></script>
 
 </body>
 </html>
